force-app/main/default/objects/Conversation_Transcript__c/Conversation_Transcript__c.object-meta.xml
<CustomObject>
    <label>Conversation Transcript</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversation Transcript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>