force-app/main/default/objects/Conversation_Transcript__c/fields/Collected_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Collected_Data_JSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collected_Data_JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>