force-app/main/default/objects/Conversation_Transcript__c/fields/Current_Step_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current_Step_API_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>