force-app/main/default/objects/Conversation_Transcript__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>